# modbus-iiot-rust

./: .coveralls.yml  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md
examples/: client.rs
src/: lib.rs
src/core/: consts.rs  datatransformation.rs  ethernet.rs  methods.rs  mod.rs  modbusreturn.rs  modbustelegram.rs  timehandling.rs
src/network/: common.rs  mod.rs  socket.rs
src/tcp/: master.rs  masteraccess.rs  mod.rs  streamtelegram.rs
