[package]
name = "modbus-iiot"
version = "0.1.0"
authors = ["Klaus Landsdorf <klaus.landsdorf@bianco-royal.de>"]
repository = "https://github.com/biancode/modbus-iiot-rust.git"
license = "MPL-2.0"
description="A pure rust library to work with Modbus in IoT/IIoT projects. It is based on the Modbus protocol specification with less dependencies."
keywords = ["modbus", "hardware", "iiot", "iot", "opcua", "pure", "tcp", "industrial"]

[badges]
travis-ci = { repository = "BiancoRoyal/modbus-iiot-rust" }
coveralls = { repository = "BiancoRoyal/modbus-iiot-rust", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "BiancoRoyal/modbus-iiot-rust" }
is-it-maintained-open-issues = { repository = "BiancoRoyal/modbus-iiot-rust" }