[package]
name = "modbus-iiot"
version = "0.2.0"
authors = ["Klaus Landsdorf <klaus.landsdorf@bianco-royal.de>"]
repository = "https://github.com/BiancoRoyal/modbus-iiot-rust"
license = "MPL-2.0"
description="A pure Rust library for working with Modbus in IoT/IIoT projects. It is based on the Modbus protocol specification with the focus on no or few dependencies."
keywords = ["modbus", "fieldbus", "iiot", "opcua", "automation"]
homepage = "https://bianco-royal.cloud/"
readme = "README.md"

[badges]
travis-ci = { repository = "BiancoRoyal/modbus-iiot-rust" }
coveralls = { repository = "BiancoRoyal/modbus-iiot-rust", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "BiancoRoyal/modbus-iiot-rust" }
is-it-maintained-open-issues = { repository = "BiancoRoyal/modbus-iiot-rust" }
